--- a/ios/app.html
+++ b/ios/app.html
@@ -1,1 +1,18 @@
-<a href="itms-services://?action=download-manifest&url=https://ilottery.rytest.com/ios/ios.plist" class="mobile-ios"><img src="meinv.jpg"></a>
+
+
+<!doctype html>
+ 
+<html>
+ 
+<head>
+    <title> </title>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="EDGE" />
+ 
+ 
+
+</head>
+<body  >
+<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/datiaoge/MaYa/master/ios/ios.plist" class="mobile-ios"><img src="meinv.jpg"></a>
+</body>
+</html>
