--- a/ios/app.html
+++ b/ios/app.html
@@ -13,6 +13,6 @@
 
 </head>
 <body  >
-<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/datiaoge/MaYa/master/ios/ios.plist" class="mobile-ios"><img src="meinv.jpg"></a>
+<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/datiaoge/MaYa/master/ios/ios.plist" class="mobile-ios"><img src="meinv.jpg" width=500 height=500></a>
 </body>
 </html>
