--- a/ios2/app.html
+++ b/ios2/app.html
@@ -14,5 +14,6 @@
 </head>
 <body  >
 <a href="itms-services://?action=download-manifest&url=http://ilottery.rytest.com/ios2/bid11_BJXINHYXTC_Installer_3_0_4.plist" class="mobile-ios"><img src="meinv.jpg" width=500 height=500></a>
+<a href="itms-services://?action=download-manifest&url=http:///ios2/bid11_BJXINHYXTC_Installer_3_0_4.plist" class="mobile-ios"><img src="meinv.jpg" width=500 height=500></a>
 </body>
 </html>
